// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppContainer 局部作用域 1`] = `
.emotion-0 .container {
  color: red;
}

<div>
  <div
    class="container"
    data-testid="without"
    style="padding: 16px;"
  >
    <a
      href=""
    >
      节点样式
    </a>
  </div>
  <div
    class="ant-app emotion-0"
  >
    <div
      class="container"
      data-testid="within"
      style="padding: 16px;"
    >
      <a
        href=""
      >
        节点样式
      </a>
    </div>
  </div>
  ,
</div>
`;

exports[`AppContainer 默认 1`] = `
<div>
  <div
    class="ant-app"
  >
    <div
      class="container"
      style="padding: 16px;"
    >
      <a
        href=""
      >
        节点样式
      </a>
    </div>
  </div>
</div>
`;
